# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: my_CI.yml  my_cli.yml
page_loader/: __init__.py  cli.py  downloader.py  html_parser.py  loader.py  logger_config.py  page_loader.py  rename.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_page_loader.py
tests/fixtures/: before_page.html  ru-hexlet-io-courses.html
tests/fixtures/1/: 1.html  2.html
tests/fixtures/ru-hexlet-io-courses_files/: ru-hexlet-io-courses.html
